Resolve issues for firefox - reduce margin for hint to remove overflow and add value to submit button.

--- a/app/assets/stylesheets/rsvp.scss
+++ b/app/assets/stylesheets/rsvp.scss
@@ -202,5 +202,5 @@ label.check-box {
 }
 
 .hint {
-  margin-top: 50px;
+  margin-top: 30px;
 }
